--- a/index.html
+++ b/index.html
@@ -15,62 +15,6 @@
             display: block;
         }
 
-        .controls {
-            position: absolute;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
-        .joystick {
-            position: relative;
-            width: 100px;
-            height: 100px;
-            background-color: #444;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .joystick-inner {
-            width: 40px;
-            height: 40px;
-            background-color: #888;
-            border-radius: 50%;
-            position: absolute;
-        }
-
-        .button {
-            background-color: #555;
-            color: white;
-            padding: 15px;
-            font-size: 18px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        #jumpButton {
-            font-size: 22px;
-            padding: 20px;
-            background-color: #f76c6c;
-        }
-
-        #restartButton, #speedButton {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            margin-left: 10px;
-        }
-
-        #restartButton {
-            top: 70px;
-        }
-
         .game-over, .victory {
             position: absolute;
             top: 50%;
@@ -84,17 +28,8 @@
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
-    <div class="game-over" id="gameOverMessage" style="display: none;">Game Over! Press Restart.</div>
-    
-    <div class="controls">
-        <div class="joystick" id="joystick">
-            <div class="joystick-inner" id="joystickInner"></div>
-        </div>
-        <button class="button" id="jumpButton">Jump</button>
-    </div>
-
-    <button class="button" id="restartButton">Restart</button>
-    <button class="button" id="speedButton">Speed +</button>
+    <div class="game-over" id="gameOverMessage" style="display: none;">Game Over! Press R to Restart.</div>
+    <div class="victory" id="victoryMessage" style="display: none;"></div>
 
     <script src="game.js"></script>
 </body>
